--- a/Header.html
+++ b/Header.html
@@ -119,9 +119,11 @@
 			<div class="nav-column">
 				<h3>Course Materials</h3>
 
-				<ul><li role="menuitem"><a href="http://guides.library.ucsc.edu/reserves">Course Reserves</a></li>
+				<ul>
+					<li role="menuitem"><a href="http://guides.library.ucsc.edu/reserves">Course Reserves</a></li>
 					<li role="menuitem"><a href="http://guides.library.ucsc.edu/courseguides">Course Guides</a></li>
-					<li role="menuitem"><a href="https://library.ucsc.edu/services/library-teaching-support">Teaching Support<span>Work with a librarian to support your class</span></a></li>
+					<li role="menuitem"><a href="https://library.ucsc.edu/services/library-teaching-support">Teaching Support<span>For Instructors</span></a></li>
+					<li role="menuitem"><a href="https://guides.library.ucsc.edu/affordable-textbooks/Instructors">Affordable Textbooks</a></li>
 				</ul></div>
 
 			<div class="nav-column">
