--- a/ToptoSide_template.html
+++ b/ToptoSide_template.html
@@ -15,7 +15,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				{{ADMIN_MINI_CMD_BAR}}
 			</div>
             <div id="s-lg-guide-header-info">
-                <h1 id="s-lg-guide-name">{{guide_title}}: {{page_title}}</h1>
+                <h1 id="s-lg-guide-name">{{guide_title}}</h1>
                 <div id="s-lg-guide-desc-container">
                     <span id="s-lg-guide-description">{{guide_description}}</span>
                 </div>
