Updating to current version of header, footer,and css/js code.

--- a/Header.html
+++ b/Header.html
@@ -4,7 +4,7 @@
 		<div class="site-logo">
 			<h1>
 				<a href="https://www.ucsc.edu">
-					<img src="https://library.ucsc.edu/sites/default/files/external/images/header-ucsc-logo.png" alt="UC Santa Cruz" />
+					<img src="https://library.ucsc.edu/sites/default/files/external/images/header-ucsc-logo.svg" alt="UC Santa Cruz" />
 				</a>
 				<span class="site-title-mobile">University Library</span>
 			</h1>
@@ -156,7 +156,8 @@
 					<li role="menuitem"><a href="http://digitalcollections.ucsc.edu/">Digital Collections</a></li>
 					<li role="menuitem"><a href="http://guides.library.ucsc.edu/videogames">Video Games</a></li>
 					<li role="menuitem"><a href="http://guides.library.ucsc.edu/maps">Maps &amp; Aerial Photographs</a></li>
-					<li role="menuitem"><a href="https://library.ucsc.edu/recommend-a-purchase">Recommend a Purchase</a></li>
+					<li role="menuitem"><a href="/recommend-a-purchase">Recommend a Purchase</a></li>
+<li role="menuitem"><a href="http://guides.library.ucsc.edu/serial_cancellations">Journal &amp; Database (Serial)&nbsp;Cancellation Review</a></li>
 				</ul></div>
 
 			<div class="nav-column">
