Updating theme to use white version of UCSC Logo (per INC0563714)

--- a/libguides-header.html
+++ b/libguides-header.html
@@ -4,7 +4,7 @@
 		<div class="site-logo">
 			<h1>
 				<a href="https://www.ucsc.edu">
-					<img src="https://library.ucsc.edu/sites/default/files/external/images/header-ucsc-logo.svg" alt="UC Santa Cruz" />
+					<img src="https://library.ucsc.edu/sites/default/files/external/images/header-ucsc-logo-white.png" alt="UC Santa Cruz" />
 				</a>
 				<span class="site-title-mobile">University Library</span>
 			</h1>
