Updated URL for Library Organizational Chart
About -> Our Organization -> Library Organizational Chart

--- a/libguides-header.html
+++ b/libguides-header.html
@@ -200,7 +200,7 @@
 				<h3>Our Organization</h3>
 
 				<ul><li role="menuitem"><a href="https://library.ucsc.edu/about/about-the-libraries">About the UCSC Library</a></li>
-					<li role="menuitem"><a href="https://library.ucsc.edu/sites/default/files/ORG_Chart_111717.pptx.pdf">Library Organizational Chart</a></li>
+					<li role="menuitem"><a href="https://drive.google.com/file/d/1DNOFUY2XxgbAK0pqdW06UsJC5lhY-XYR/view?usp=sharing">Library Organizational Chart</a></li>
 					<li role="menuitem"><a href="https://library.ucsc.edu/about/jobs/job-opportunities">Job Opportunities</a></li>
 				</ul></div>
 
