Adding incident form link

--- a/libguides-footer.html
+++ b/libguides-footer.html
@@ -1,11 +1,11 @@
 <!-- Footer -->
 
 <div class="footer2">
-	    
+
 		  <div class="region region-footer">
     <div id="block-block-34" class="block block-block">
 
-    
+
   <div class="content">
      <div class="container">
 	<div class="row">
@@ -22,7 +22,7 @@
 
 		<div class="accessibility-info col-sm-2"><a href="https://library.ucsc.edu/services/patrons-with-disabilities">Patrons with Disabilities</a><br /><a href="https://its.ucsc.edu/terms/">Privacy Policy</a></div>
 
-		<div class="staff-links col-sm-2"><a href="https://guides.library.ucsc.edu/internal/home">Staff Portal</a><br /><a href="https://ucsc.libapps.com/libapps/login.php?site_id=113">LibApps Login</a></div>
+		<div class="staff-links col-sm-2"><a href="https://guides.library.ucsc.edu/internal/home">Staff Portal</a><br /><a href="https://ucsc.libapps.com/libapps/login.php?site_id=113">LibApps Login</a><br><a href="https://library.ucsc.edu/user/login?destination=node/4392" target="_blank">Incident Form (staff only)</a></div>
 
 		<div class="social col-sm-2"><a href="http://twitter.com/UCSCLibrary"><img alt="Library Twitter page" src="https://library.ucsc.edu/sites/default/files/external/images/footer-social-twitter.png" /></a> <a href="http://www.facebook.com/ucsclibrary"><img alt="Library Facebook Page" src="https://library.ucsc.edu/sites/default/files/external/images/footer-social-facebook.png" /></a> <a href="https://www.instagram.com/ucsc_library/"><img alt="Library Instagram Page" src="https://library.ucsc.edu/sites/default/files/external/images/footer-social-instagram.png" /></a> <a href="https://www.youtube.com/channel/UCvHn6xiFe5L6JdASah1QnsQ"><img alt="Library Youtube page" src="https://library.ucsc.edu/sites/default/files/external/images/footer-social-youtube.png" /></a></div>
 	</div>
