Updated Maps & Directions URL
About -> Library Contacts -> Maps & Directions; updated to redirected library.ucsc.edu URL

--- a/libguides-header.html
+++ b/libguides-header.html
@@ -193,7 +193,7 @@
 
 				<ul><li role="menuitem"><a href="https://guides.library.ucsc.edu/contactus">Contact Us</a></li>
 					<li role="menuitem"><a href="https://campusdirectory.ucsc.edu/cd_department?ou=library&amp;affiliation=Staff+%26+Faculty">Staff Directory</a></li>
-					<li role="menuitem"><a href="http://maps.ucsc.edu/content/directions-uc-santa-cruz-campus">Maps &amp; Directions</a></li>
+					<li role="menuitem"><a href="https://library.ucsc.edu/maps-and-directions">Maps &amp; Directions</a></li>
 				</ul></div>
 
 			<div class="nav-column">
