Updated Recommend a Purchase and Quiet Study Areas
Collections -> Library Collections -> Recommend a Purchase
Services -> Library Spaces -> Quiet Study Areas

--- a/libguides-header.html
+++ b/libguides-header.html
@@ -131,7 +131,7 @@
 				<h3>Library Spaces</h3>
 
 				<ul><li role="menuitem"><a href="http://guides.library.ucsc.edu/reserve-a-study-room">Reserve a Study Room</a></li>
-					<li role="menuitem"><a href="https://library.ucsc.edu/services/quiet-study">Quiet Study Areas</a></li>
+					<li role="menuitem"><a href="https://guides.library.ucsc.edu/quiet-study-areas">Quiet Study Areas</a></li>
 					<li role="menuitem"><a href="https://library.ucsc.edu/services/computing/printing-and-computing">Library Computers</a></li>
 					<li role="menuitem"><a href="http://guides.library.ucsc.edu/DSC/Home">David Kirk Digital Scholarship Commons</a></li>
 					<li role="menuitem"><a href="http://guides.library.ucsc.edu/mediacenter">Media Desk<span>@ the David Kirk DSC</span></a></li>
@@ -157,7 +157,7 @@
 					<li role="menuitem"><a href="http://digitalcollections.ucsc.edu/">Digital Collections</a></li>
 					<li role="menuitem"><a href="http://guides.library.ucsc.edu/videogames">Video Games</a></li>
 					<li role="menuitem"><a href="http://guides.library.ucsc.edu/maps">Maps &amp; Aerial Photographs</a></li>
-					<li role="menuitem"><a href="/recommend-a-purchase">Recommend a Purchase</a></li>
+					<li role="menuitem"><a href="https://library.ucsc.edu/recommend-a-purchase">Recommend a Purchase</a></li>
 <li role="menuitem"><a href="http://guides.library.ucsc.edu/serial_cancellations">Journal &amp; Database (Serial)&nbsp;Cancellation Review</a></li>
 				</ul></div>
 
