OCA Proxy & Journal Cancelation
Changed URL to a direct link and changed menu item to "Log in to Off-Campus Access Proxy" and removed an "l" from the Journal Cancelation Project menu item

--- a/libguides-header.html
+++ b/libguides-header.html
@@ -91,7 +91,7 @@
 
 				<ul><li role="menuitem" style="list-style-type: disc; list-style-image: none;"><a href="http://guides.library.ucsc.edu/offcampusaccess">Off-Campus Access Options</a></li>
 					<li role="menuitem"><a href="https://its.ucsc.edu/vpn/installation.html">Campus VPN</a></li>
-					<li role="menuitem"><a href="https://login.oca.ucsc.edu/login">Off-Campus Access Proxy</a></li>
+					<li role="menuitem"><a href="https://login.oca.ucsc.edu/login?auth=shibboleth&url=^U">Log in to Off-Campus Access&nbsp;Proxy</a></li>
 					<li role="menuitem"><a href="https://its.ucsc.edu/wireless/eduroam.html">Eduroam On-Campus Wifi</a></li>
 				</ul></div>
 		</div>
@@ -158,7 +158,7 @@
 					<li role="menuitem"><a href="http://guides.library.ucsc.edu/videogames">Video Games</a></li>
 					<li role="menuitem"><a href="http://guides.library.ucsc.edu/maps">Maps &amp; Aerial Photographs</a></li>
 					<li role="menuitem"><a href="https://library.ucsc.edu/recommend-a-purchase">Recommend a Purchase</a></li>
-<li role="menuitem"><a href="http://guides.library.ucsc.edu/serial_cancellations">Journal &amp; Database (Serial)&nbsp;Cancellation Review</a></li>
+<li role="menuitem"><a href="http://guides.library.ucsc.edu/serial_cancellations">Journal &amp; Database (Serial)&nbsp;Cancelation Review</a></li>
 				</ul></div>
 
 			<div class="nav-column">
