Changed 2 DSC links
Changed Digital Scholarship links in Services and Collections to point to temporary / new Remote guide

--- a/libguides-header.html
+++ b/libguides-header.html
@@ -133,7 +133,7 @@
 				<ul><li role="menuitem"><a href="http://guides.library.ucsc.edu/reserve-a-study-room">Reserve a Study Room</a></li>
 					<li role="menuitem"><a href="https://guides.library.ucsc.edu/quiet-study-areas">Quiet Study Areas</a></li>
 					<li role="menuitem"><a href="https://library.ucsc.edu/services/computing/printing-and-computing">Library Computers</a></li>
-					<li role="menuitem"><a href="http://guides.library.ucsc.edu/DSC/Home">David Kirk Digital Scholarship Commons</a></li>
+					<li role="menuitem"><a href="https://guides.library.ucsc.edu/DSC_Remote/home">David Kirk Digital Scholarship Commons</a></li>
 					<li role="menuitem"><a href="http://guides.library.ucsc.edu/mediacenter">Media Desk<span>@ the David Kirk DSC</span></a></li>
 				</ul></div>
 		</div>
@@ -166,7 +166,7 @@
 
 				<ul><li role="menuitem"><a href="http://guides.library.ucsc.edu/openaccess">Open Access</a></li>
 					<li role="menuitem"><a href="http://guides.library.ucsc.edu/datamanagement/">Research Data Management</a></li>
-					<li role="menuitem"><a href="http://guides.library.ucsc.edu/DSC/Consultations">Digital Scholarship<span>Digital assignments &amp; project consultation</span></a></li>
+					<li role="menuitem"><a href="https://guides.library.ucsc.edu/DSC_Remote/home">Digital Scholarship<span>Digital assignments &amp; project consultation</span></a></li>
 				</ul></div>
 
 			<div class="nav-column">
