MegaMenu: Updated 3 Links & 1 Label
Updated links for: Digital Collections and Strategic Directions
Updated link and label: Strategic Goals to Mission & Vision

--- a/libguides-header.html
+++ b/libguides-header.html
@@ -154,7 +154,7 @@
 				<h3>Library Collections</h3>
 
 				<ul><li role="menuitem"><a href="http://guides.library.ucsc.edu/generalcollections">Our Collections</a></li>
-					<li role="menuitem"><a href="http://digitalcollections.ucsc.edu/">Digital Collections</a></li>
+					<li role="menuitem"><a href="https://guides.library.ucsc.edu/digitalcollections">Digital Collections</a></li>
 					<li role="menuitem"><a href="http://guides.library.ucsc.edu/videogames">Video Games</a></li>
 					<li role="menuitem"><a href="http://guides.library.ucsc.edu/maps">Maps &amp; Aerial Photographs</a></li>
 					<li role="menuitem"><a href="https://library.ucsc.edu/recommend-a-purchase">Recommend a Purchase</a></li>
@@ -200,7 +200,7 @@
 				<h3>Our Organization</h3>
 
 				<ul><li role="menuitem"><a href="https://library.ucsc.edu/about/about-the-libraries">About the UCSC Library</a></li>
-					<li role="menuitem"><a href="https://drive.google.com/file/d/1DNOFUY2XxgbAK0pqdW06UsJC5lhY-XYR/view?usp=sharing">Library Organizational Chart</a></li>
+					<li role="menuitem"><a href="https://library.ucsc.edu/library-organizational-chart">Library Organizational Chart</a></li>
 					<li role="menuitem"><a href="https://library.ucsc.edu/about/jobs/job-opportunities">Job Opportunities</a></li>
 				</ul></div>
 
@@ -208,8 +208,8 @@
 				<h3>Policies &amp; Strategy</h3>
 
 				<ul><li role="menuitem"><a href="https://library.ucsc.edu/about/university-library-policies">University Library Policies</a></li>
-					<li role="menuitem"><a href="http://guides.library.ucsc.edu/Strategic_Plan_Goals">Strategic Directions</a></li>
-					<li role="menuitem"><a href="http://guides.library.ucsc.edu/Strategic_Plan_Goals/communication">Strategic Goals</a></li>
+					<li role="menuitem"><a href="https://guides.library.ucsc.edu/strategicplan">Strategic Directions</a></li>
+					<li role="menuitem"><a href="https://guides.library.ucsc.edu/strategicplan/home#mission">Mission & Vision</a></li>
 				</ul></div>
 		</div>
 	</li>
