Updated link to ILL Help & FAQs

--- a/libguides-header.html
+++ b/libguides-header.html
@@ -114,7 +114,7 @@
 				<ul><li role="menuitem"><a href="http://ucsc.worldcat.org/">Borrow From Another Library<span>Melvyl</span></a></li>
 					<li role="menuitem"><a href="https://ucill.vdxhost.com/zportal/zengine?VDXaction=LoginPage">My ILL Account</a></li>
 					<li role="menuitem"><a href="http://guides.library.ucsc.edu/ill/home">How to Request an ILL</a></li>
-					<li role="menuitem"><a href="http://guides.library.ucsc.edu/c.php?g=337968&amp;p=4055714">ILL Help &amp; FAQs</a></li>
+					<li role="menuitem"><a href="https://guides.library.ucsc.edu/ill/faq">ILL Help &amp; FAQs</a></li>
 				</ul></div>
 
 			<div class="nav-column">
