Ask a Librarian to Get Research Help
Updated label and URL

--- a/libguides-header.html
+++ b/libguides-header.html
@@ -75,7 +75,7 @@
 					<li role="menuitem"><a href="https://guides.library.ucsc.edu/c.php?g=148148&amp;p=971541">Choose A Topic</a></li>
 					<li role="menuitem"><a href="https://guides.library.ucsc.edu/c.php?g=148148&amp;p=1850717">Search A Database</a></li>
 					<li role="menuitem"><a href="https://guides.library.ucsc.edu/c.php?g=148148&amp;p=971552">Evaluate Sources</a></li>
-					<li role="menuitem"><a href="http://guides.library.ucsc.edu/ask-a-librarian">Ask a Librarian<span>Get help online or in person</span></a></li>
+					<li role="menuitem"><a href="https://guides.library.ucsc.edu/ask">Get Research Help<span>Online, Zoom, or phone</span></a></li>
 				</ul></div>
 
 			<div class="nav-column">
