Code formatting cleanup.

--- a/look-and-feel.html
+++ b/look-and-feel.html
@@ -1226,54 +1226,51 @@ body.front .footer2 {
 }
 
 @media only screen and (min-width : 768px) {
-
 	.footer2 iframe {
 		float: right;
 	}
-	
+
 	.view-news .views-slideshow-cycle-main-frame-row-item, .view-news-767plus .views-slideshow-cycle-main-frame-row-item {
 		float: left;
 	}
-	
+
 	.view-news .views-slideshow-cycle-main-frame-row, .view-news-767plus .views-slideshow-cycle-main-frame-row {
 		height: 170px;
 		overflow: visible;
 	}
-	
+
 	.view-news .views-slideshow-cycle-main-frame {
 		height: 280px;
 		overflow: visible;
 	}
-	
+
 	.footer2 .contact, .footer2 .creative-commons, .footer2 .accessibility-info, .footer2 .staff-links, .footer2 .social {
 		text-align: left;
 	}
-
 }
 
 @media only screen and (min-width : 860px) {
-	
 	.header-main h1 {
 		font-size: 1px;
 	}
-	
+
 	.header-main h1 .site-title-mobile {
 		display: none;
 	}
-	
+
 	.view-news .views-slideshow-cycle-main-frame-row-item, .view-news-860plus .views-slideshow-cycle-main-frame-row-item {
 		float: left;
 	}
-	
+
 	.view-news .views-slideshow-cycle-main-frame-row, .view-news-860plus .views-slideshow-cycle-main-frame-row {
 		height: 170px;
 	}
-	
+
 	.view-news .views-slideshow-cycle-main-frame-row-item, .view-news-860plus .views-slideshow-cycle-main-frame-row-item {
 		width: 400px;
 		height: 151px;
 	}
-	
+
 	.view-news .views-field-field-main-exhibit-image, .view-news-860plus .views-field-field-main-exhibit-image {
 		float: left;
 		margin-right: 8px;
@@ -1283,25 +1280,24 @@ body.front .footer2 {
 		height: 170px;
 		overflow: visible;
 	}
-	
+
 	.view-news .views-slideshow-cycle-main-frame, .view-news-860plus .views-slideshow-cycle-main-frame {
 		height: 170px;
 		overflow: visible;
 	}
-	
+
 	.header-secondary-menu ul li {
 		float: left;
 	}
-	
-		.header-secondary-menu ul li li {
+
+	.header-secondary-menu ul li li {
 		float: none;
-	}
-	
-	
+	}	
+
 	.mega-menu {
 	  	width: 860px;
 	}
-	
+
 	.mega-research {
 	  left: -198px;
 	}
@@ -1322,96 +1318,95 @@ body.front .footer2 {
 		padding: 10px 10px 4px 10px;
 		height: 45px;
 	}
-	
+
 	.header-main h1 {
 		margin: 0px;
 		float: left;
-		/*font-size: 1px;*/
 	}
-	
+
 	.header-main-menu {
 		float: right;
 	}
-	
+
 	.header-main-menu .content {
 		text-align: center;
 		display: inline-block;
 	}
-	
+
 	.header-main-menu #block-system-main-menu, .header-main-menu #block-menu-menu-main-menu {
 		display: inline-block;
 	}
-	
+
 	.header-main-menu ul {
 		display: inline-block;
 		margin: 0px 0px 0px 0px;
 		padding: 0px 0px 10px 10px;
 		background-color: transparent;
 	}
-	
+
 	.header-main-menu ul.menu li.leaf {
 		display: inline;
 		padding: 0px 10px 0px 0px;
 		list-style-type: none;
 		text-align: left;
 	}
-	
+
 	.header-main-menu ul li a {
 		border: none;
 		background-color: transparent;
 	}
-		.header-main-menu ul li a:hover {
+	.header-main-menu ul li a:hover {
 		text-decoration: underline;
 		background-color: transparent;
 		color: #fff;
 	}
-	
+
 	.header-main-menu ul li a {
 		background-image: url('https://library.ucsc.edu/sites/default/files/external/images/golddot.png');
 		padding: 1px 0px 0px 16px;
 		background-position: 0% 55%;
 	}
-	
+
 	.header-main-menu ul li a.hours {
 		background-image: none;
 		padding: 1px 0px 0px 0px;
 	}
-	
+
 	.header-main-sitesearch {
 		display: inline-block;
 		margin: 0px;
 	}
-	
+
 	.header-main-sitesearch img {
 		margin: 0 auto;
 		display: inline-block;
 	}
-	
+
 	.header-main-sitesearch form .form-text {
 		margin: 0px 2px 0px 8px;
 	}
-	
+
 	.header-secondary h2 {
 		margin: 0px;
 		float: left;
 		text-align: left;
 		display: block;
 	}
-	
+
 	.header-secondary .header-secondary-menu {
 		float: right;
 		padding: 10px;
 		background-color: transparent;
 	}
-	
+
 	.header-secondary .header-secondary-menu .menubutton {
 		display: none;
 	}
-	
+
 	.header-secondary .header-secondary-menu ul.menu {
 		display: block;
 	}
-	
+
 	.header-secondary-menu ul li {
 		text-decoration: none;
 		display: inline-block;
@@ -1419,25 +1414,25 @@ body.front .footer2 {
 		list-style-type: none;
 		font-size: .77em;
 	}
-	
+
 	.nav-column {
   		float: left;
 		background-color: #fff;
 		padding: 2.5%;
 	}
-	
+
 	.header-secondary-menu ul li a {
 		display: inline-block;
 		border-bottom: none;
 		padding: 5px 10px;
 		font-size: 1em;
 	}
-	
+
 	.header-secondary-menu ul li a.research {
 		border-top: none;
 		margin-top: 0px;
 	}
-	
+
 	.nav-column h3 {
     	text-align: left;
 	}
@@ -1446,29 +1441,24 @@ body.front .footer2 {
     	width: 100%;
 		margin: 0px;
 	}
-	
+
 	.header-secondary-menu ul ul li a:hover {
     	background-color: #ffcc33;
     	border-radius: 0px;
 	}
-
-
 }
 
 @media only screen and (min-width : 1000px) {
-	
-
 	/* styles for databases block */
-	
 	.view-news .views-slideshow-cycle-main-frame-row-item, .view-news-860plus .views-slideshow-cycle-main-frame-row-item {
 		float: left;
 	}
-	
+
 	.view-news .views-slideshow-cycle-main-frame-row, .view-news-860plus .views-slideshow-cycle-main-frame-row {
 		height: 170px;
 		overflow: visible;
 	}
-	
+
 	.view-news .views-slideshow-cycle-main-frame, .view-news-860plus .views-slideshow-cycle-main-frame {
 		height: 170px;
 		overflow: visible;
@@ -1483,7 +1473,7 @@ body.front .footer2 {
 		float: left;
 		padding-top: 20px;
 	}
-	
+
 	.databases-dropdown h2 {
 		margin-top: 0px;
 	}
@@ -1492,9 +1482,8 @@ body.front .footer2 {
 		width: 760px;
 		padding-left: 380px;
 		padding-top: 20px;
-
 	}
-	
+
 	.guides-dropdown h2 {
 		margin-top: 0px;
 	}
@@ -1502,8 +1491,7 @@ body.front .footer2 {
 	#s-lg-sel-guide-widget-1499379943765 {
 		width: 300px;
 	}
-	
-	
+
 	.mega-menu-mid {
 	  	width: 1000px;
 	}
@@ -1522,27 +1510,24 @@ body.front .footer2 {
 
 	.mega-about {
 		left: -866px;
-	}
-	
+	}	
 }
 
-
 @media only screen and (min-width : 1350px) {
-	
 	.view-news .views-slideshow-cycle-main-frame-row-item, .view-news-860plus .views-slideshow-cycle-main-frame-row-item {
 		float: left;
 	}
-	
+
 	.view-news .views-slideshow-cycle-main-frame-row, .view-news-860plus .views-slideshow-cycle-main-frame-row {
 		height: 170px;
 		overflow: visible;
 	}
-	
+
 	.view-news .views-slideshow-cycle-main-frame, .view-news-860plus .views-slideshow-cycle-main-frame {
 		height: 170px;
 		overflow: visible;
 	}
-	
+
 	.mega-menu-wide {
 	  	width: 1350px;
 	}
@@ -1561,12 +1546,14 @@ body.front .footer2 {
 
 	.mega-about {
 		left: -1215.5px;
-	}
-	
+	}	
 }
 
-
-/*LibGuides Content Styling*/
+/*
+ *
+ * LibGuides Content Styling
+ *
+ */
 
 #s-lg-tabs-container .nav-tabs > li > a {
 background-color: transparent;
@@ -1680,40 +1667,40 @@ border-right: 1px solid #DDD;
     width: 252px;
 }
 
+/*hides down arrow for sub-menu items*/
 a.s-lg-tab-drop.dropdown-toggle { 
 display:none;
 }
-/*hides down arrow for sub-menu items*/
 
+/*hides Subject Homepage links in guides homepage*/
 div.alert.alert-info.margin-top-med {
 display:none;
 }
-/*hides Subject Homepage links in guides homepage*/
 
+/*hides Subjects drop-down filter in A-Z list*/
 #s-lg-sel-subjects {
 display:none;
 }
-/*hides Subjects drop-down filter in A-Z list*/
 
+/*hides sub-menu pop open on hover over*/
 ul.s-lg-subtab-ul.dropdown-menu > li {
 	display:none;
 }
-/*hides sub-menu pop open on hover over*/
 
+/*stops a page with sub-pages from expanding/contracting in the left menu*/
 ul.s-lg-subtab-ul.dropdown-menu {
 min-width:0px;
 }
-/*stops a page with sub-pages from expanding/contracting in the left menu*/
 
+/*adds gray bar to left of sub-menu items*/
 .s-lg-tabs-side .s-lg-subtab-ul {
 	border-left:#DDDDDD solid 2px;
 }
-/*adds gray bar to left of sub-menu items*/
 
+/*reduces font size in gold Admin bar to keep page title visible*/ 
 ul.nav.navbar-nav {
         font-size:12px;
 }
-/*reduces font size in gold Admin bar to keep page title visible*/ 
 
 /* Tabbed navigation pages fixes */
 .s-lib-jqtabs ul.nav-tabs {
