CSS change for tabbed boxes
Decreased padding for tab style boxes

--- a/look-and-feel.html
+++ b/look-and-feel.html
@@ -1,4 +1,3 @@
-
 <style>
 /* Global Styles */
 
@@ -1708,6 +1707,7 @@ ul.nav.navbar-nav {
 }
 .nav-tabs > li > a {
     border: 1px solid #ddd;
+padding:10px 7px;
 }
 
 </style>
