Tabbed navigation border fix.

--- a/look-and-feel.html
+++ b/look-and-feel.html
@@ -1705,9 +1705,13 @@ ul.nav.navbar-nav {
 /* Tabbed navigation pages fixes */
 .s-lib-jqtabs ul.nav-tabs {
     padding: 0;
+    top: 7px;
 }
 .nav-tabs > li > a {
     border: 1px solid #ddd;
+}
+.s-lib-jqtabs div.tab-content {
+	border-top: 1px solid #ddd;
 }
 
 </style>
