Search form label accessibility fix.

--- a/libguides-header.html
+++ b/libguides-header.html
@@ -30,7 +30,7 @@
     <form class="google-cse" action="https://library.ucsc.edu/search/google" method="post" id="search-block-form" accept-charset="UTF-8"><div><div class="container-inline">
       <h2 class="element-invisible">Search form</h2>
     <div class="form-item form-type-textfield form-item-search-block-form">
-  <label class="element-invisible" for="edit-search-block-form--2">Search </label>
+  <label class="element-invisible" for="edit-keys">Search </label>
 		
  <input title="Enter the terms you wish to search for." type="text" id="edit-keys" name="keys" value="" size="40" maxlength="128" class="form-text" />
 		<!--
