Updated Recommend a Purchase & Digital Scholarship
Updated link & text for Recommend a Purchase to Request a Purchase
Updated URL for Digital Scholarship & DK Digital Scholarship Commons

--- a/libguides-header.html
+++ b/libguides-header.html
@@ -133,7 +133,7 @@
 				<ul><li role="menuitem"><a href="http://guides.library.ucsc.edu/reserve-a-study-room">Reserve a Study Room</a></li>
 					<li role="menuitem"><a href="https://guides.library.ucsc.edu/quiet-study-areas">Quiet Study Areas</a></li>
 					<li role="menuitem"><a href="https://library.ucsc.edu/services/computing/printing-and-computing">Library Computers</a></li>
-					<li role="menuitem"><a href="https://guides.library.ucsc.edu/DSC_Remote/home">David Kirk Digital Scholarship Commons</a></li>
+					<li role="menuitem"><a href="http://digitalscholarship.ucsc.edu/">David Kirk Digital Scholarship Commons</a></li>
 					<li role="menuitem"><a href="http://guides.library.ucsc.edu/mediacenter">Media Desk<span>@ the David Kirk DSC</span></a></li>
 				</ul></div>
 		</div>
@@ -157,7 +157,7 @@
 					<li role="menuitem"><a href="https://guides.library.ucsc.edu/digitalcollections">Digital Collections</a></li>
 					<li role="menuitem"><a href="http://guides.library.ucsc.edu/videogames">Video Games</a></li>
 					<li role="menuitem"><a href="http://guides.library.ucsc.edu/maps">Maps &amp; Aerial Photographs</a></li>
-					<li role="menuitem"><a href="https://library.ucsc.edu/recommend-a-purchase">Recommend a Purchase</a></li>
+					<li role="menuitem"><a href="https://library.ucsc.edu/request-a-purchase">Request a Purchase</a></li>
 <li role="menuitem"><a href="http://guides.library.ucsc.edu/serial_cancellations">Journal &amp; Database (Serial)&nbsp;Cancelation Review</a></li>
 				</ul></div>
 
@@ -166,7 +166,7 @@
 
 				<ul><li role="menuitem"><a href="http://guides.library.ucsc.edu/openaccess">Open Access</a></li>
 					<li role="menuitem"><a href="http://guides.library.ucsc.edu/datamanagement/">Research Data Management</a></li>
-					<li role="menuitem"><a href="https://guides.library.ucsc.edu/DSC_Remote/home">Digital Scholarship<span>Digital assignments &amp; project consultation</span></a></li>
+					<li role="menuitem"><a href="http://digitalscholarship.ucsc.edu/">Digital Scholarship<span>Digital assignments &amp; project consultation</span></a></li>
 				</ul></div>
 
 			<div class="nav-column">
